# proxybox

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh.md  SECURITY.md  config.example.yaml  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  gitleaks.yml  lint.yml  release.yml  secrets-scan.yml  test.yml
app/: bootstrap.py  config.py  main.py
app/auth/: passkey.py  token.py
app/db/: connection.py  init.py  schema.sql
app/models/: device.py
app/routers/: account.py  actions.py  bans.py  connections.py  devices.py  history.py  (+6 more)
bot/: __main__.py  api.py  config.py  handlers.py
deploy/: check-prereqs.sh  docker-guard.sh  docker-https-apply.sh  docker-install.sh  enable-https.sh  get.sh  install.sh
docs/: architecture.md  getting-started.md  guide.md  index.md  package.json
scripts/: check-sni.py  detect-secrets-ci.py  pii-check.sh  release-audit-history-ignore  release-audit.sh
static/: index.html
tests/: test_admin_password.py  test_admin_token_rotation.py  test_auth_contracts.py  test_config_loader.py  test_device_delete_privacy.py  test_docker_default_install.py  test_install_script_contracts.py  test_login_forwarded_headers.py  test_login_rate_limit.py  test_passkey_challenges.py  test_sensitive_file_permissions.py  test_sni_pool.py  test_static_route_contracts.py  test_subscriptions.py  test_traffic_worker.py
(+26 files in other folders)
